design: fix overflow in service description

--- a/src/components/Service.module.css
+++ b/src/components/Service.module.css
@@ -30,9 +30,12 @@
   width: max-content;
 }
 
+.button {
+  max-width: 25rem !important;
+}
+
 .description {
   display: block;
-  width: max-content;
   margin-bottom: 0;
 }
 
